# enterprise-ai-copilot

./: .env  .env.example  ARCHITECTURE.md  PROGRESS.md  PROJECT_CONTEXT.md  README.md  ROADMAP.md  docker-compose.yml  main.py  pyproject.toml
apps/api/: main.py
apps/api/routes/: ingest.py  retrieval.py
docs/: architecture.md  roadmap.md
docs/decisions/: 0001-platform-architecture.md  0002-hybrid-retrieval.md  ADR-0001-project-architecture.md
